--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -48,9 +48,14 @@ body{
     width: 100%;
     column-gap: 26px;
 }
+.nav-link {
+    color: #374151; 
+    font-weight: 700;
+  }
 .nav-link:hover {
     color: #3B82F6; /* Your desired hover color */
   }
+  
 .bg-body-tertiary {
     --bs-bg-opacity: 1;
     background-color: #EFF6FF !important;
@@ -288,4 +293,205 @@ cursor: pointer;
 }
 .right{
   margin-right: 4rem;
+}
+/* about us */
+.about-us{
+
+  height: 142vh;
+}
+.leftsvg{
+  width: 30rem;
+    height: auto;
+    position: absolute;
+    top: 91px;
+    left: 0px;
+    z-index: -1;
+}
+.rightsvg{
+  width: 30rem;
+    height: auto;
+    position: absolute;
+    top: 91px;
+    right: 0px;
+    z-index: -1;
+}
+.leftsvgend{
+  width: 30rem;
+  height: auto;
+  position: absolute;
+  top: 43rem;
+  left: -5px;
+  z-index: -1;
+
+  clip-path: inset(0px 0px 26rem 0px);
+
+  object-fit: cover;
+}
+.rightsvgend{
+  width: 30rem;
+  height: auto;
+  position: absolute;
+  top: 43rem;
+  right:0px;
+  z-index: -1;
+  clip-path: inset(0px 0px 26rem 0px);
+
+  object-fit: cover;
+}
+
+.about-us-title{
+  font-size: 3rem;
+  position: relative;
+  top: 70px;
+}
+.underlinesvg{
+  top: 54px;
+  position: relative;
+}
+.teamworkjpg{
+  width: 103%;
+    height: auto;
+    clip-path: inset(15px 22px 22px 15px);
+    object-fit: cover;
+    border-radius: 68px 83px 91px 79px;
+    margin-top: 5.5rem;
+    margin-left: -0.8rem;
+
+}
+.about-us-card{
+  margin-top: 6.2rem;
+  background-color: #f9fdff;
+  border-radius: 20px;
+  position: relative;
+  box-shadow: 0px 0px 26px -9px rgb(126 126 126 / 45%);
+  padding-top: 1.3rem;
+    padding-right: 1rem;
+    padding-left: 2rem;
+    
+}
+.font-2rem{
+  font-size: 2.5rem;
+}
+.rounded-sm{
+  border-radius: 12px;
+  padding-top: 0.6rem;
+  padding-bottom: 0.6rem;
+}
+.experience-card{
+  background-color: #f9fdff;
+  position: relative;
+  border-radius: 19px;
+  width: 97%;
+  height: 38vh;
+  margin-top: 17px;
+  padding-top: 35px;
+  box-shadow: 0px 0px 26px -9px rgb(126 126 126 / 45%);
+}
+/* choose us */
+.choose-us{
+  height: 554px;
+  background-color: #60a5fa;
+  background-image: url(../images/choose-us.svg);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
+.choose-us-title{
+  font-size: 3rem;
+  position: relative;
+  top: 70px;
+  color: #f0f9ff ;
+}
+.choose-us-para{
+  margin-top: 5rem;
+  color: #F1F5F9;
+  width: 91%;
+  text-align: center;
+  margin-left: 2.5rem;
+  font-size: 17px;
+  font-weight: 100;
+}
+.font-dark{
+  color:#364050!important ;
+}
+.choose-us-card{
+  background: transparent;
+  /* border: 1px solid #f0f9ff; */
+  border-radius: 10px;
+  height: 260px;
+  width: 364px;
+  border: 1.5px solid #93C5FD;
+  padding :40px 16px 40px 16px;
+  text-align: center;
+}
+.choose-us-card-title{
+  font-size: 24px;
+  color: #FAFAFA;
+  margin:10px 0px;
+  font-weight: 600;
+}
+.choose-us-card-para{
+  color: #FAFAFA;
+  font-size: 14px;
+  font-weight: 400;
+}
+/* emplooyee */
+.employee{
+  height: 137vh;
+}
+.pixels1{
+  border-radius: 19px;
+  position: absolute;
+  margin-top: 5rem;
+
+}
+.pixels2{
+  border-radius: 19px;
+  position: absolute;
+  margin:9rem 0 0 17.8rem;
+
+}
+.pixels3{
+  border-radius: 19px;
+  position: absolute;
+  margin-top: 28rem;
+
+}
+.pixels4{
+  border-radius: 19px;
+  position: absolute;
+  margin:32rem 0 0 17.8rem;
+}
+.employee-card{
+  margin-top: 13rem;
+  padding: ;
+}
+.employee-title{
+  font-size: 48px;
+
+}
+.employee-body{
+  font-size: 20px;
+  margin-top: 2rem;
+}
+/* our team */
+.font-3rem{
+  font-size: 3rem;
+}
+.member-card{
+  width: 255px;
+  height: 180px;
+}
+.arrow-image {
+  clip-path: polygon(-60% 0%, 169% 0%, 35% 100%, 58% 100%);
+  border-radius: 10px;
+}
+.arrow{
+  clip-path: inset(0px 0px 32px 0px); 
+}
+.member-name{
+  font-size: 30px;
+}
+.memeber-position{
+  font-size: 14px;
+  font-weight: 500;
 }
