--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -713,3 +713,27 @@ cursor: pointer;
   font-size: 18px;
   font-weight: 600;
 }
+
+
+
+
+/* responsive */
+@media (max-width: 576px) {
+  .leftsvg{
+    width: 12rem;
+    top: 12rem;
+  }
+  .rightsvg{
+    width: 12rem;
+    top: 12rem;
+  }
+  .teamworkjpg{
+    margin-left: 0;
+  }
+  .experience-card{
+    padding: 33px;
+  }
+  .font-2rem{
+    font-size: 1.5rem;
+  }
+}
